--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -11,49 +11,10 @@
   text-align: center;
 }
 
-.columns .button-wrapper {
-  justify-content: center;
-}
-
-@media (width >= 600px) {
-  .columns div {
-    text-align: unset;
-  }
-  
-  .columns .button-wrapper {
-    justify-content: unset;
-  }
-}
-
 .columns > div > div {
   order: 1;
   padding: var(--spacing-m) 0;
-}
-
-.columns > div > div + div {
   margin-top: var(--horizontal-spacing);
-}
-
-@media (width >= 600px) {
-  .columns > div {
-    align-items: center;
-    flex-direction: unset;
-    gap: var(--horizontal-spacing);
-  }
-
-  .columns > div + div {
-    margin-top: var(--spacing-s);
-  }
-
-  .columns > div > div {
-    flex: 1;
-    order: unset;
-    align-self: center;
-  }
-
-  .columns > div > div + div {
-    margin-top: 0;
-  }
 }
 
 .columns > div > .col-img {
@@ -68,9 +29,40 @@
   object-fit: cover;
 }
 
+.columns .button-wrapper {
+  justify-content: center;
+}
+
 @media (width >= 600px) {
-  .columns > div > .col-img img {
-    height: calc(66dvh - var(--header-height));
+  .columns div {
+    text-align: unset;
+    align-items: center;
+    flex-direction: unset;
+    gap: var(--horizontal-spacing);
+  }
+
+  .columns > div + div {
+    margin-top: var(--spacing-s);
+  }
+
+  .columns > div > div {
+    flex: 1;
+    order: unset;
+    align-self: center;
+    margin-top: 0;
+  }
+
+  .columns > div > div + div {
+    margin-top: 0;
+  }
+
+  .columns .button-wrapper {
+    justify-content: unset;
+  }
+
+  /* stretch variant */
+  .columns.stretch > div > div:not([class]) {
+    max-width: max-content;
   }
 }
 
@@ -78,12 +70,5 @@
   .columns > div > .col-img img {
     height: calc(50dvw - (2 * var(--horizontal-spacing)));
     max-height: 300px;
-  }
-}
-
-/* stretch variant */
-@media (width >= 600px) {
-  .columns.stretch > div > div:not([class]) {
-    max-width: max-content;
   }
 }
