--- a/blocks/highlight/highlight.css
+++ b/blocks/highlight/highlight.css
@@ -20,7 +20,6 @@
 }
 
 .highlight > div > div p.img-wrapper picture img {
-    border: 2px solid var(--blue);
     border-radius: 50%;
     height: 250px;
     width: 250px;
